[package]
name = "storz-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust library for controlling Storz & Bickel vaporizers via Bluetooth Low Energy"
license = "MIT"
repository = "https://github.com/flakesonnix/storz-rs"
keywords = ["bluetooth", "ble", "vaporizer", "iot", "btleplug"]
categories = ["hardware-support", "api-bindings"]

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
